# confidential-asset-wasm-bindings

./: gen-npm-pkg.sh  readme.md
.github/workflows/: build-wasm.yml
movement-confidential-asset-wasm-bindings/: index.d.ts  package.json
movement-confidential-asset-wasm-bindings/pollard-kangaroo/: movement_pollard_kangaroo_wasm-cjs.js  movement_pollard_kangaroo_wasm-esm.js  movement_pollard_kangaroo_wasm.d.ts  movement_pollard_kangaroo_wasm_bg.wasm  movement_pollard_kangaroo_wasm_bg.wasm.d.ts
movement-confidential-asset-wasm-bindings/range-proofs/: movement_rp_wasm-cjs.js  movement_rp_wasm-esm.js  movement_rp_wasm.d.ts  movement_rp_wasm_bg.wasm  movement_rp_wasm_bg.wasm.d.ts
pollard-kangaroo/: Cargo.toml  build-wasm.sh
range-proofs/: Cargo.toml  build-wasm.sh  test.ts
