[package]
name = "movement_pollard_kangaroo_wasm"
edition = "2021"

[dependencies]
curve25519-dalek-ng = "4"
wasm-bindgen = "0.2.99"
getrandom = { version = "0.2", features = ["js"] }
# Note: Using distributed-lab pollard-kangaroo as it's pure crypto, not chain-specific
pollard-kangaroo = { git = "https://github.com/distributed-lab/pollard-kangaroo.git", branch = "main", features = ["table48", "table32", "presets"] }

[lib]
crate-type = ["cdylib"]